--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -20,6 +20,7 @@
   background-color: rgba(255, 255, 255, 0.7);
   padding: 24px 48px;
   border-radius: 15px;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
 }
 
 .loginForm {
