--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,12 +6,6 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
-}
-
-.title {
-  color: darkblue;
-  text-shadow: 2px 2px 2px gray;
 }
 
 .loginBox {
@@ -34,4 +28,40 @@
   color: white;
   font-size: xx-large;
   text-shadow: 2px 2px 2px gray;
+}
+
+.authBtn {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(0, 0, 0),
+    rgb(61, 61, 61)
+  );
+  color: white;
+  height: 30px;
+  border: none;
+  outline: none;
+  width: 90px;
+  border-radius: 15px;
+  font-size: medium;
+  font-weight: 600;
+  box-shadow: 5px 3px 4px rgba(0, 0, 0, 0.5);
+}
+
+.authBtn:hover {
+  cursor: pointer;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(31, 31, 31),
+    rgb(80, 80, 80)
+  );
+}
+
+.authBtn:disabled {
+  cursor: default;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(138, 138, 138),
+    rgb(207, 207, 207)
+  );
+  box-shadow: none;
 }
