--- a/src/components/AuthStatus.css
+++ b/src/components/AuthStatus.css
@@ -1,10 +1,10 @@
-.welcomeContainer {
+.authContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.welcomeText {
+.signInStatus {
   color: white;
   font-size: 14px;
   text-align: center;
