--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 116px - 85px);
 }
 
 .loginBox {
