--- a/src/components/ContentWrapper.css
+++ b/src/components/ContentWrapper.css
@@ -3,13 +3,16 @@
   background: url("../assets/american-flags.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: calc(100vh - 116px - 85px);
+  padding: 100px 0;
 }
 
 .content {
-  width: 80%;
+  width: 90%;
   max-width: 1200px;
-  padding: 100px;
+  padding: 20px;
   margin: auto;
   background-color: white;
   box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.7), -5px 0px 10px rgba(0, 0, 0, 0.7);
+  border-radius: 15px;
 }
