--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .welcomeHome {
-  font-size: xx-large;
+  font-size: x-large;
   color: darkblue;
   text-shadow: 2px 2px 2px rgba(13, 12, 15, 0.5);
   text-align: center;
@@ -10,4 +10,35 @@
   width: 80%;
   max-width: 700px;
   margin: auto;
+}
+
+.section {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.section:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.right {
+  justify-content: right;
+  text-align: right;
+}
+
+.left {
+  justify-content: left;
+  text-align: left;
+}
+
+.sectionImg {
+  object-fit: cover;
+}
+
+.sectionHead {
+  margin-bottom: 10px;
+  color: darkblue;
 }
