--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -21,8 +21,9 @@
   text-align: center;
   color: darkblue;
   padding-bottom: 10px;
-  border-bottom: 2px solid slategray;
+  border-bottom: 1px solid slategray;
   margin-bottom: 10px;
+  text-shadow: 2px 2px 2px rgba(13, 12, 15, 0.5);
 }
 
 .loginForm {
@@ -42,32 +43,6 @@ input {
   border-radius: 5px;
 }
 
-.showPass {
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(179, 0, 0),
-    rgb(99, 9, 9)
-  );
-  color: white;
-  height: 20px;
-  border: none;
-  outline: none;
-  width: 70px;
-  border-radius: 15px;
-  font-size: medium;
-  font-weight: 600;
-  box-shadow: 5px 3px 4px rgba(0, 0, 0, 0.5);
-}
-
-.showPass:hover {
-  cursor: pointer;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(124, 0, 0),
-    rgb(46, 4, 4)
-  );
-}
-
 .error {
   color: darkred;
   text-align: center;
@@ -78,40 +53,4 @@ input {
   color: white;
   font-size: xx-large;
   text-shadow: 2px 2px 2px gray;
-}
-
-.authBtn {
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(0, 0, 0),
-    rgb(61, 61, 61)
-  );
-  color: white;
-  height: 30px;
-  border: none;
-  outline: none;
-  width: 90px;
-  border-radius: 15px;
-  font-size: medium;
-  font-weight: 600;
-  box-shadow: 5px 3px 4px rgba(0, 0, 0, 0.5);
-}
-
-.authBtn:hover {
-  cursor: pointer;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(31, 31, 31),
-    rgb(80, 80, 80)
-  );
-}
-
-.authBtn:disabled {
-  cursor: default;
-  background-image: linear-gradient(
-    to bottom right,
-    rgb(138, 138, 138),
-    rgb(207, 207, 207)
-  );
-  box-shadow: none;
 }
