--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -1,14 +1,21 @@
 .categoryList {
   width: 80%;
   max-width: 700px;
-  margin: auto;
+  margin: 40px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: center;
+  gap: 30px;
 }
 
 .categoryHead {
   text-transform: capitalize;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  text-shadow: 2px 2px 4px rgb(0, 0, 0);
+  writing-mode: vertical-rl;
 }
 
 .showJoke {
@@ -34,4 +41,16 @@
     rgb(124, 0, 0),
     rgb(46, 4, 4)
   );
+}
+
+.categoryInfo {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.categoryInfo:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
