--- a/src/App.css
+++ b/src/App.css
@@ -31,25 +31,17 @@
   }
 }
 
-.nav {
-  display: flex;
-}
-
-.nav > a {
+.navItem > a {
   text-decoration: none;
   text-align: center;
   color: white;
-  border-left: 1px solid white;
   padding: 10px 15px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
 }
 
-.nav > a:hover {
+.navItem > a:hover {
   background-color: rgba(255, 255, 255, 0.3);
-}
-
-.nav > a:first-child {
-  border: none;
 }
 
 .footer {
