--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -44,7 +44,6 @@
   height: 20px;
   border: none;
   outline: none;
-  width: 70px;
   border-radius: 15px;
   font-size: medium;
   font-weight: 600;
@@ -58,4 +57,14 @@
     rgb(124, 0, 0),
     rgb(46, 4, 4)
   );
+}
+
+.smallBtn:disabled {
+  cursor: default;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(161, 120, 120),
+    rgb(112, 74, 74)
+  );
+  box-shadow: none;
 }
