--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -18,9 +18,18 @@
   box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
-.canClick:hover {
+.searchResult:hover {
   background-color: gainsboro;
   cursor: pointer;
+}
+
+.hasViewed {
+  background-color: rgb(218, 203, 203);
+  border: 1px solid rgb(170, 160, 160);
+}
+
+.hasViewed:hover {
+  background-color: rgb(170, 160, 160);
 }
 
 .searchResultContent {
